fixed the docker-compose.yml, now the scraper and the db can comunicate

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,5 +15,7 @@ services:
             - "./scripts/creata_table.sql:/docker-entrypoint-initdb.d/create_table.sql"
         
     scraper:
-        build: ../webscraper/docker_file
+        build: ../webscraper
+        depends_on: 
+            - db
         
