--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,4 +18,14 @@ services:
         build: ../webscraper
         depends_on: 
             - db
+    
+    api:
+        build: ../api
+        environment: 
+            - FLASK_APP=main.py
+        ports:
+            - "5000:5000"
+        depends_on: 
+            - db
+            - scraper
         
