--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,7 +12,7 @@ services:
             - "5432:5432"
         volumes: 
             - "./db:/var/lib/postgresql/data/"
-            - "./scripts/creata_table.sql:/docker-entrypoint-initdb.d/create_table.sql"
+            - "./creata_table.sql:/docker-entrypoint-initdb.d/create_table.sql"
         
     scraper:
         build: ../webscraper
@@ -25,7 +25,6 @@ services:
             - FLASK_APP=main.py
         ports:
             - "5000:5000"
-        depends_on: 
+        depends_on:
             - db
-            - scraper
         
