--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,7 +12,7 @@ services:
             - "5432:5432"
         volumes: 
             - "./db:/var/lib/postgresql/data/"
-            - "./creata_table.sql:/docker-entrypoint-initdb.d/create_table.sql"
+            - "./init.sql:/docker-entrypoint-initdb.d/init.sql"
         
     scraper:
         build: ../webscraper
