--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,8 +11,8 @@ services:
         ports: 
             - "5432:5432"
         volumes: 
-            - "./db:/var/lib/postgresql/data/"
-            - "./init.sql:/docker-entrypoint-initdb.d/init.sql"
+            - "./db:/var/lib/postgresql/data"
+            - "./scripts:/docker-entrypoint-initdb.d/"
         
     scraper:
         build: ../webscraper
