--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,32 +7,38 @@ services:
         environment: 
             - POSTGRES_USER=root
             - POSTGRES_PASSWORD=toor
-            - POSTGRES_DB=test_db
+            - POSTGRES_DB=postgres
         ports: 
             - "5432:5432"
         volumes: 
             - "./db:/var/lib/postgresql/data"
             - "./scripts:/docker-entrypoint-initdb.d/"
+        healthcheck:
+            test: ["CMD-SHELL", "pg_isready"]
+            interval: 5s
+            timeout: 5s
+            retries: 5
+    scraper:
+        build: ../webscraper
+        depends_on:
+          db:
+            condition: service_healthy
+        environment:
+            - POSTGRES_USER=root
+            - POSTGRES_PASSWORD=toor
+            - POSTGRES_DATABASE=postgres
+            - POSTGRES_ADDRESS=172.21.64.1
 
-#
-#    scraper:
-#        build: ../webscraper
-#        depends_on:
-#          db:
-#            condition: service_healthy
-#        environment:
-#            - POSTGRES_USER=root
-#            - POSTGRES_PASSWORD=toor
-#            - POSTGRES_DATABASE=postgres
-#            - POSTGRES_ADDRESS=localhost
-#
 #    api:
 #        build: ../api
 #        environment:
 #            - FLASK_APP=main.py
+#            - POSTGRES_USER=root
+#            - POSTGRES_PASSWORD=toor
+#            - POSTGRES_DATABASE=postgres
+#            - POSTGRES_ADDRESS=172.21.64.1
 #        ports:
 #            - "5000:5000"
 #        depends_on:
 #          db:
 #            condition: service_healthy
-#
