--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,33 +7,12 @@ services:
         environment: 
             - POSTGRES_USER=root
             - POSTGRES_PASSWORD=toor
-<<<<<<< HEAD
-            - POSTGRES_DB=test_db
-=======
             - POSTGRES_DB=postgres
->>>>>>> refactor
         ports: 
             - "5432:5432"
         volumes: 
             - "./db:/var/lib/postgresql/data"
             - "./scripts:/docker-entrypoint-initdb.d/"
-<<<<<<< HEAD
-        
-    scraper:
-        build: ../webscraper
-        depends_on: 
-            - db
-    
-    api:
-        build: ../api
-        environment: 
-            - FLASK_APP=main.py
-        ports:
-            - "5000:5000"
-        depends_on:
-            - db
-        
-=======
         healthcheck:
             test: ["CMD-SHELL", "pg_isready"]
             interval: 5s
@@ -48,19 +27,18 @@ services:
             - POSTGRES_USER=root
             - POSTGRES_PASSWORD=toor
             - POSTGRES_DATABASE=postgres
-            - POSTGRES_ADDRESS=172.21.64.1
+            - POSTGRES_ADDRESS=
 
-#    api:
-#        build: ../api
-#        environment:
-#            - FLASK_APP=main.py
-#            - POSTGRES_USER=root
-#            - POSTGRES_PASSWORD=toor
-#            - POSTGRES_DATABASE=postgres
-#            - POSTGRES_ADDRESS=172.21.64.1
-#        ports:
-#            - "5000:5000"
-#        depends_on:
-#          db:
-#            condition: service_healthy
->>>>>>> refactor
+    api:
+        build: ../api
+        environment:
+            - FLASK_APP=main.py
+            - POSTGRES_USER=root
+            - POSTGRES_PASSWORD=toor
+            - POSTGRES_DATABASE=postgres
+            - POSTGRES_ADDRESS=
+        ports:
+            - "5000:5000"
+        depends_on:
+          db:
+            condition: service_healthy
